Creates cli to build and to analyse a project; Separates src/ from build/;

--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "typescript-compiler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^2.2.0-dev.20170123"
-  },
-  "dependencies": {
-    "ntypescript": "1.201609302242.1",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.5"
-  }
+    "name": "bau-analyser",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc && node build/cli/finish-build.js"
+    },
+    "bin": {
+        "bau-analyse": "build/cli/analyse.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/fs-extra": "0.0.37",
+        "typescript": "^2.2.0-dev.20170123"
+    },
+    "dependencies": {
+        "fs-extra": "^2.0.0",
+        "ntypescript": "1.201609302242.1",
+        "tslint": "^4.3.1",
+        "typescript": "^2.1.5"
+    }
 }
