Tests ImportService and Graph (with subcomponents). Creates GraphFactory (Graph no longer injectable and now singleton). Correctly implements singleton for Project and Graph (was wrong before - used instance members, which are now static)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "tsc && (node build/spec/helpers/copy-mock-project.js) && jasmine",
+        "test-full": "tsc && (node build/spec/helpers/copy-mock-project.js) && jasmine",
+        "test": "tsc && jasmine",
         "build": "rimraf build/ && tsc && node build/src/cli/finish-build.js",
         "build-dev": "tsc && npm link"
     },
