--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "fs-extra": "^2.0.0",
     "inversify": "^3.0.0",
+    "jasmine": "^2.6.0",
     "ntypescript": "1.201609302242.1",
     "reflect-metadata": "^0.1.9",
     "strong-paths": "^1.0.0",
